fix scrollbar; minor change

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -15,7 +15,6 @@ body {
 }
 
 #app {
-  overflow: hidden;
   display: flex;
   box-sizing: border-box;
 }
